# WQ-Simulator

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml
docs/: ARCHITECTURE.md  CPP_FEATURES.md  CPP_FEATURES_CHECKLIST.md  PROJECT_SUMMARY.md  QUICKSTART.md  SECURITY.md  SYSTEM_FLOW.md  USE_CASES.md
proto/: alpha_signals.proto  market_data.proto  portfolio.proto  risk.proto
scripts/: build-ems.sh  build.sh  market_data_generator.py
services/alpha-engine/: CMakeLists.txt
services/alpha-engine/include/: alpha_engine.hpp  alpha_strategy.hpp
services/alpha-engine/src/: alpha_engine.cpp  alpha_strategy.cpp  main.cpp
services/data-feed-handler/: CMakeLists.txt
services/data-feed-handler/include/: data_feed_handler.hpp  data_types.hpp
services/data-feed-handler/src/: data_feed_handler.cpp  data_types.cpp  main.cpp
services/ems-java/: pom.xml
services/ems-java/src/main/java/com/wq/ems/: EMSApplication.java
services/ems-java/src/main/java/com/wq/ems/algo/: IcebergAlgorithm.java  TWAPAlgorithm.java
services/ems-java/src/main/java/com/wq/ems/model/: Order.java  TargetPosition.java
services/ems-java/src/main/java/com/wq/ems/service/: DatabaseService.java  OrderManagementService.java
services/risk-guardian/: CMakeLists.txt
services/risk-guardian/include/: risk_checks.hpp  risk_guardian.hpp
services/risk-guardian/src/: main.cpp  risk_checks.cpp  risk_guardian.cpp
services/signal-aggregator/: CMakeLists.txt
services/signal-aggregator/include/: signal_aggregator.hpp
services/signal-aggregator/src/: main.cpp  signal_aggregator.cpp
